...
            <Text style={estilos.label}>Teléfono Emisor</Text>
            <TextInput
              style={estilos.input}
              value={telefono}
              onChangeText={setTelefono}
              keyboardType="phone-pad"
              placeholder="0414..."
              placeholderTextColor={isDark ? colores.textoGris : "#888"}
            />
          </View>
          <View style={{ flex: 1 }}>
            <Text style={estilos.label}>Fecha del Pago</Text>
            <TextInput
...
