...
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                style={[estilos.btnPrincipal, { flex: 1 }]}
                onPress={guardarUsuario}
              >
                <Text style={estilos.btnTexto}>Guardar</Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </Modal>
    </ScrollView>
...
