...
                <Text style={estilos.label}>Correo Electrónico</Text>
                <TextInput
                  style={[
                    estilos.input,
                    !isDark && { borderColor: colores.primario },
                  ]}
                  placeholder="tu@correo.com"
                  placeholderTextColor={colores.textoGris}
                  keyboardType="email-address"
                  autoCapitalize="none"
                  editable={!isLoading}
                  value={email}
                  onChangeText={setEmail}
...
